--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Top#index</h1>
-<p>Find me in app/views/top/index.html.erb</p>
+<h1>Top#show</h1>
+<p>Find me in app/views/top/show.html.erb</p>
+
+<%= link_to '質問に答える', ques1_index_path %>
