--- a/app/views/tops/new.html.erb
+++ b/app/views/tops/new.html.erb
@@ -1,4 +1,15 @@
 <h1>あなたをものに例えると！？！？</h1>
 <h2>5つの質問に答えるだけで、あなたの正体丸わかり!!!</h2>
 
+<%= form_with(modal: @top, local: true) do |f| %>
+  
+  <div class="field-form">
+    <%= f.label :name, '名前' %>
+    <%= f.text_field :name, autofocus: true, placeholder: "名前" %>
+  </div>
 
+  <div class="field-form">
+    <%= f.submit "質問へ" %>
+  </div>
+
+<% end %>
