--- a/app/views/tops/new.html.erb
+++ b/app/views/tops/new.html.erb
@@ -8,10 +8,10 @@
   </div>
 
   <div class="field-form">
-    <%= f.radio_button :ques_one, :yes %>
-    <%= f.label :ques_one, "はい", {value: :yes, style: "display: inline-block;"} %>
-    <%= f.radio_button :ques_one, :no %>
-    <%= f.label :ques_one, "いいえ", {value: :no, style: "display: inline-block;"} %>
+    <%= f.radio_button :ques_one, '1' %>
+    <%= f.label :ques_one, "はい", {value: 1, style: "display: inline-block;"} %>
+    <%= f.radio_button :ques_one, '0' %>
+    <%= f.label :ques_one, "いいえ", {value: 0, style: "display: inline-block;"} %>
   </div>
 
   <div class="field-form">
