一問目追加

--- a/app/views/tops/new.html.erb
+++ b/app/views/tops/new.html.erb
@@ -8,6 +8,7 @@
   </div>
 
   <div class="field-form">
+    <p>私は朝型より夜型である</p>
     <%= f.radio_button :ques_one, '1' %>
     <%= f.label :ques_one, "はい", {value: 1, style: "display: inline-block;"} %>
     <%= f.radio_button :ques_one, '0' %>
