--- a/app/views/tops/new.html.erb
+++ b/app/views/tops/new.html.erb
@@ -8,15 +8,15 @@
   </div>
 
   <div class="field-form">
-    <p>朝型より夜型である</p>
+    <p>夜型である</p>
     <%= f.radio_button :ques_one, '1' %>
-    <%= f.label :ques_one, "はい(夜型)", {value: 1, style: "display: inline-block;"} %>
+    <%= f.label :ques_one, "はい(朝型)", {value: 1, style: "display: inline-block;"} %>
     <%= f.radio_button :ques_one, '0' %>
-    <%= f.label :ques_one, "いいえ(朝型)", {value: 0, style: "display: inline-block;"} %>
+    <%= f.label :ques_one, "いいえ(夜型)", {value: 0, style: "display: inline-block;"} %>
   </div>
 
   <div class="field-form">
-    <p>私は話をする時、話を聞くより話をする方が好きだ。</p>
+    <p>話をする方が好きだ。</p>
     <%= f.radio_button :ques_two, '1' %>
     <%= f.label :ques_two, "はい(話をする方が好き)", {value: 1, style: "display: inline-block;"} %>
     <%= f.radio_button :ques_two, '0' %>
@@ -25,7 +25,7 @@
   
 
   <div class="field-form">
-    <p>人付き合いは、「広く浅く」より「狭く深く」である。</p>
+    <p>人付き合いは、「広く浅く」である。</p>
     <%= f.radio_button :ques_three, '1' %>
     <%= f.label :ques_three, "はい(狭く深く)", {value: 1, style: "display: inline-block;"} %>
     <%= f.radio_button :ques_three, '0' %>
@@ -33,19 +33,19 @@
   </div>
   
   <div class="field-form">
-    <p>行動をする時は、計画を立てる</p>
+    <p>行動は計画的である。</p>
     <%= f.radio_button :ques_four, '1' %>
-    <%= f.label :ques_four, "はい(行動をするときは計画を立てる)", {value: 1, style: "display: inline-block;"} %>
+    <%= f.label :ques_four, "はい(計画的に行動する)", {value: 1, style: "display: inline-block;"} %>
     <%= f.radio_button :ques_four, '0' %>
-    <%= f.label :ques_four, "いいえ(行動をするときは計画を立てない)", {value: 0, style: "display: inline-block;"} %>
+    <%= f.label :ques_four, "いいえ(偶発的に行動する)", {value: 0, style: "display: inline-block;"} %>
   </div>
 
   <div class="field-form">
     <p>臨機応変に対応できる</p>
     <%= f.radio_button :ques_five, '1' %>
-    <%= f.label :ques_five, "はい(臨機応変に対応で着る)", {value: 1, style: "display: inline-block;"} %>
+    <%= f.label :ques_five, "はい(臨機応変に対応できる)", {value: 1, style: "display: inline-block;"} %>
     <%= f.radio_button :ques_five, '0' %>
-    <%= f.label :ques_five, "いいえ(臨機応変に対応できない)", {value: 0, style: "display: inline-block;"} %>
+    <%= f.label :ques_five, "いいえ(臨機応変に対応するのは苦手)", {value: 0, style: "display: inline-block;"} %>
   </div>
 
   <div class="field-form">
