質問の文言を変更

--- a/app/views/tops/new.html.erb
+++ b/app/views/tops/new.html.erb
@@ -8,7 +8,7 @@
   </div>
 
   <div class="field-form">
-    <p>夜型である</p>
+    <p>朝型である</p>
     <%= f.radio_button :ques_one, '1' %>
     <%= f.label :ques_one, "はい(朝型)", {value: 1, style: "display: inline-block;"} %>
     <%= f.radio_button :ques_one, '0' %>
