--- a/app/views/tops/new.html.erb
+++ b/app/views/tops/new.html.erb
@@ -9,10 +9,10 @@
 
   <div class="field-form">
     <p>朝型である</p>
-    <%= f.radio_button :ques_one, '1' %>
-    <%= f.label :ques_one, "はい(朝型)", {value: 1, style: "display: inline-block;"} %>
-    <%= f.radio_button :ques_one, '0' %>
-    <%= f.label :ques_one, "いいえ(夜型)", {value: 0, style: "display: inline-block;"} %>
+    <%= f.radio_button :ques_one, true %>
+    <%= f.label :ques_one, "はい(朝型)", {value: true, style: "display: inline-block;"} %>
+    <%= f.radio_button :ques_one, false %>
+    <%= f.label :ques_one, "いいえ(夜型)", {value: false, style: "display: inline-block;"} %>
   </div>
 
   <div class="field-form">
