--- a/app/views/tops/show.html.erb
+++ b/app/views/tops/show.html.erb
@@ -20,35 +20,272 @@
   <% end %>
 <% end %>
 
-<%# 00000 %>
-<%# 00001 %>
 <%# 00010 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 3 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 00011 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 4 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 00100 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 5 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 00101 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 6 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 00110 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 7 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 00111 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 8 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 01000 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 9 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 01001 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 10 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 01010 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 11 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 01011 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 12 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 01100 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 13 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 01101 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 14 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 01110 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 15 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 01111 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 16 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 10000 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 17 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 10001 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 18 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 10010 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 19 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 10011 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 20 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 10100 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 21 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 10101 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 22 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 10110 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 23 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 10111 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 24 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 11000 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 25 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 11001 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 26 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 11010 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 27 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 11011 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 28 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 11100 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 29 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 11101 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 30 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 11110 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 31 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <%# 11111 %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+  <% @answers.each do |answer| %>
+    <% if answer.id == 32 %> 
+      <%= answer.answer %>
+    <% end %>
+  <% end %>
+<% end %>
