--- a/app/views/tops/show.html.erb
+++ b/app/views/tops/show.html.erb
@@ -21,7 +21,7 @@
 <% end %>
 
 <%# 00010 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == true && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 3 %> 
       <%= answer.answer %>
@@ -30,7 +30,7 @@
 <% end %>
 
 <%# 00011 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == true && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 4 %> 
       <%= answer.answer %>
@@ -39,7 +39,7 @@
 <% end %>
 
 <%# 00100 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == true && @top.ques_four == false && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 5 %> 
       <%= answer.answer %>
@@ -48,7 +48,7 @@
 <% end %>
 
 <%# 00101 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == true && @top.ques_four == false && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 6 %> 
       <%= answer.answer %>
@@ -57,7 +57,7 @@
 <% end %>
 
 <%# 00110 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == true && @top.ques_four == true && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 7 %> 
       <%= answer.answer %>
@@ -66,7 +66,7 @@
 <% end %>
 
 <%# 00111 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == true && @top.ques_four == true && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 8 %> 
       <%= answer.answer %>
@@ -75,7 +75,7 @@
 <% end %>
 
 <%# 01000 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == false && @top.ques_two == true && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 9 %> 
       <%= answer.answer %>
@@ -84,7 +84,7 @@
 <% end %>
 
 <%# 01001 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == false && @top.ques_two == true && @top.ques_three == false && @top.ques_four == false && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 10 %> 
       <%= answer.answer %>
@@ -93,7 +93,7 @@
 <% end %>
 
 <%# 01010 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == false && @top.ques_two == true && @top.ques_three == false && @top.ques_four == true && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 11 %> 
       <%= answer.answer %>
@@ -102,7 +102,7 @@
 <% end %>
 
 <%# 01011 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == false && @top.ques_two == true && @top.ques_three == false && @top.ques_four == true && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 12 %> 
       <%= answer.answer %>
@@ -111,7 +111,7 @@
 <% end %>
 
 <%# 01100 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == false && @top.ques_two == true && @top.ques_three == true && @top.ques_four == false && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 13 %> 
       <%= answer.answer %>
@@ -120,7 +120,7 @@
 <% end %>
 
 <%# 01101 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == false && @top.ques_two == true && @top.ques_three == true && @top.ques_four == false && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 14 %> 
       <%= answer.answer %>
@@ -129,7 +129,7 @@
 <% end %>
 
 <%# 01110 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == false && @top.ques_two == true && @top.ques_three == true && @top.ques_four == true && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 15 %> 
       <%= answer.answer %>
@@ -138,7 +138,7 @@
 <% end %>
 
 <%# 01111 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == false && @top.ques_two == true && @top.ques_three == true && @top.ques_four == true && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 16 %> 
       <%= answer.answer %>
@@ -147,7 +147,7 @@
 <% end %>
 
 <%# 10000 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == true && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 17 %> 
       <%= answer.answer %>
@@ -156,7 +156,7 @@
 <% end %>
 
 <%# 10001 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == true && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 18 %> 
       <%= answer.answer %>
@@ -165,7 +165,7 @@
 <% end %>
 
 <%# 10010 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == true && @top.ques_two == false && @top.ques_three == false && @top.ques_four == true && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 19 %> 
       <%= answer.answer %>
@@ -174,7 +174,7 @@
 <% end %>
 
 <%# 10011 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == true && @top.ques_two == false && @top.ques_three == false && @top.ques_four == true && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 20 %> 
       <%= answer.answer %>
@@ -183,7 +183,7 @@
 <% end %>
 
 <%# 10100 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == true && @top.ques_two == false && @top.ques_three == true && @top.ques_four == false && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 21 %> 
       <%= answer.answer %>
@@ -192,7 +192,7 @@
 <% end %>
 
 <%# 10101 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == true && @top.ques_two == false && @top.ques_three == true && @top.ques_four == false && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 22 %> 
       <%= answer.answer %>
@@ -201,7 +201,7 @@
 <% end %>
 
 <%# 10110 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == true && @top.ques_two == false && @top.ques_three == true && @top.ques_four == true && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 23 %> 
       <%= answer.answer %>
@@ -210,7 +210,7 @@
 <% end %>
 
 <%# 10111 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == true && @top.ques_two == false && @top.ques_three == true && @top.ques_four == true && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 24 %> 
       <%= answer.answer %>
@@ -219,7 +219,7 @@
 <% end %>
 
 <%# 11000 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == true && @top.ques_two == true && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 25 %> 
       <%= answer.answer %>
@@ -228,7 +228,7 @@
 <% end %>
 
 <%# 11001 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == true && @top.ques_two == true && @top.ques_three == false && @top.ques_four == false && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 26 %> 
       <%= answer.answer %>
@@ -237,7 +237,7 @@
 <% end %>
 
 <%# 11010 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == true && @top.ques_two == true && @top.ques_three == false && @top.ques_four == true && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 27 %> 
       <%= answer.answer %>
@@ -246,7 +246,7 @@
 <% end %>
 
 <%# 11011 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == true && @top.ques_two == true && @top.ques_three == false && @top.ques_four == true && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 28 %> 
       <%= answer.answer %>
@@ -255,7 +255,7 @@
 <% end %>
 
 <%# 11100 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == true && @top.ques_two == true && @top.ques_three == true && @top.ques_four == false && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 29 %> 
       <%= answer.answer %>
@@ -264,7 +264,7 @@
 <% end %>
 
 <%# 11101 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == true && @top.ques_two == true && @top.ques_three == true && @top.ques_four == false && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 30 %> 
       <%= answer.answer %>
@@ -273,7 +273,7 @@
 <% end %>
 
 <%# 11110 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == true && @top.ques_two == true && @top.ques_three == true && @top.ques_four == true && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 31 %> 
       <%= answer.answer %>
@@ -282,7 +282,7 @@
 <% end %>
 
 <%# 11111 %>
-<% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
+<% if @top.ques_one == true && @top.ques_two == true && @top.ques_three == true && @top.ques_four == true && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 32 %> 
       <%= answer.answer %>
